Include a graphic describing the mentioned GitHub-Flow

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -294,7 +294,15 @@ An issue may be closed if \emph{all} of the following conditions are met:
 
 \section{Development}
 
-Since we are in a very early and agile stage we decided to use Github Flow\cite{github-flow}, a straightforward development workflow.
+Since we are in a very early and agile stage we decided to use GitHub Flow\cite{github-flow}, a straightforward development workflow.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.85\linewidth]{resources/github_flow}
+	\caption[Organigram]{GitHub Flow illustrated ( Source \cite{github-flow})}
+	\label{fig:organigram}
+\end{figure}
+
 
 Since the effective technology will be fixed later in the project, concrete coding guidelines, tools, metrics and an error policy will be defined when appropriate.
 
