Improve wording to clarify risks

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -187,8 +187,8 @@ To account for these risks, we reduce our weekly sprint time by the total weight
 		  & Reflect the suitability of the chosen technology during the architecture draft.
 		  & 60 & 60\% & 36\\
 
-		2 & The architecture does not scale.
-		  & The chosen architecture does not scale to the expected data volume or node size
+		2 & The architecture/concept does not scale.
+		  & The chosen architecture/concept does not scale to the expected data volume or node size
 		  & Invest an adequate amount of time in architecture design.
 		  & 30 & 40\% & 12\\
 
@@ -207,8 +207,8 @@ To account for these risks, we reduce our weekly sprint time by the total weight
 		  & Define the project scope and limitations precisely. Discuss changes with the project advisor.
 		  & 30 & 30\% & 9\\
 
-		6 & Missing architecture aspects
-		  & The architecture-whitepaper does not fully cover all necessary aspects of the prototype.
+		6 & Missing aspects in concept paper
+		  & The concept paper does not fully cover all necessary aspects of the prototype.
 		  & Invest an adequate amount of time in architecture design.
 		  & 15 & 60\% & 9\\
 
