--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -183,8 +183,9 @@ We would like to thank our advisor, Prof.Dr. Farhad Mehta, for his continuous su
 %----------------------------------------------------------------------------------------
 
 \appendix % Cue to tell LaTeX that the following "chapters" are Appendices
-
-%\include{appendices/appendix_a}
+\renewcommand{\thechapter}{A}
+\addcontentsline{toc}{chapter}{Appendices}
+\include{appendices/requirements}
 
 
 %----------------------------------------------------------------------------------------
