--- a/final-submission/appendices/requirements.tex
+++ b/final-submission/appendices/requirements.tex
@@ -25,7 +25,7 @@ As a user, \ldots{}
 	\item   I want my backup data to be stored in physical sites that I trust.
 	\item	I want my backup data to be encrypted so that only I can restore it.
 	\item	I want my backups to take place automatically, silently and continuously so that I won't forget it
-	\item	I want that the creation of a backup does not impact the performance of my device noticeably (CPU, RAM, network etc)
+	\item	I want that the creation of a backup does not impact the performance of my device noticeably (CPU, RAM, network etc).
 	\item	I want to be able to stop/restart/suspend my device at any time even if a new backup is in the process of being created.
 	\item	I want the backup software to use as less space on the disk as possible because I want to use it for my data.
 	\item \relevantreq{I want to be able to restore a deleted file within less than five minutes.}
@@ -33,16 +33,16 @@ As a user, \ldots{}
 	\item	I want to see the progress when I restore data so that I can estimate when it is done.
 	\item	I want be able to install and have the software up and running within five minutes.
 	\item	I want to exclude certain files from being backed up, for example, downloads.
-	\item	\relevantreq{I want to pay as less as possible for the storage of my data}
+	\item	\relevantreq{I want to pay as less as possible for the storage of my data.}
 	\item	\relevantreq{I don't care where my data is backed up to as long my backup is safe and the creation and restore of backups is not significantly slower.}
 	\item	\relevantreq{I want to create backups of quickly. The acceptable duration depends on the amount of new and modified data.}
 	\item	\relevantreq{I want my backups to be space efficient to safe cost.}
-	\item	I want to get notified if the creation of a backup fails
-	\item	I want to get notified if I have not created a new backup for a suspicious amount of time (e.g. usually daily but suddenly no backups for a week)
-	\item	I want to create backups from everywhere (especially not just from home)
+	\item	I want to get notified if the creation of a backup fails.
+	\item	I want to get notified if I have not created a new backup for a suspicious amount of time (e.g. usually daily but suddenly no backups for a week).
+	\item	I want to create backups from everywhere (especially not just from home).
 	\item	I don't want to perform updates manually.
 	\item	\relevantreq{I want to define how long backups are stored or use a reasonable default.}
-	\item	\relevantreq{I want my data to be stored with a defined degree of redundancy so that it does not get lost}
+	\item	\relevantreq{I want my data to be stored with a defined degree of redundancy so that it does not get lost.}
 	\item	\relevantreq{I does not matter, where my data is replicated to within my trusted network as long as it stays safe.}
 	\item	\relevantreq{I want my data to be replicated to different places (e.g. buildings) in case one of them is subject to a catastrophic event (e.g. an earthquake, fire).}
 	\item	\relevantreq{I want to be able to restore my data in case of a catastrophic event.}
@@ -54,19 +54,19 @@ As a user, \ldots{}
 As an administrator, \ldots{}
 
 \begin{enumerate}
-	\item \relevantreq{I want to receive notifications quickly when a Disk or Node in the System fails}
-	\item \relevantreq{I want to receive notifications within an hour if a Disk or Node might fail soon (e.g. SMART-Results indicate that a Disk will fail)}
+	\item \relevantreq{I want to receive notifications quickly when a Disk or Node in the System fails.}
+	\item \relevantreq{I want to receive notifications within an hour if a Disk or Node might fail soon (e.g. SMART-Results indicate that a Disk will fail).}
 	\item \relevantreq{I want to extend the storage capacity by plugging in a new Disk and starting/connecting a new node.}
-	\item \relevantreq{I want to perform updates including reboots without impacting the performance of the System (e.g. if data must be copied around)}
+	\item \relevantreq{I want to perform updates including reboots without impacting the performance of the System (e.g. if data must be copied around).}
 	\item \relevantreq{I want to be informed if a certain replication-degree cannot be met.}
 	\item \relevantreq{I want to scale the system up to 100 Nodes and down to 2.}
 	\item \relevantreq{I want to put large disks (e.g. 2TB) into a node so that I do not have to maintain an unjustifiably high number of nodes.}
 	\item \relevantreq{I want to grant new users access to the backup system.}
 	\item \relevantreq{I want to add new nodes to the system.}
 	\item \relevantreq{I want be able to see how much capacity a user is using.}
-	\item \relevantreq{I want to limit the capacity per user}
+	\item \relevantreq{I want to limit the capacity per user.}
 	\item I want to define default profiles on how long to keep backups for new users.
-	\item \relevantreq{I want to update the management server (including restart) without impacting the system (except for the configuration/monitoring part)}
+	\item \relevantreq{I want to update the management server (including restart) without impacting the system (except for the configuration/monitoring part).}
 	\item \relevantreq{I want the system to operate properly if the management node is down (no single point of failure). The addition of new nodes may not be possible without management.}
 \end{enumerate}
 
