Some more language

--- a/final-submission/appendices/requirements.tex
+++ b/final-submission/appendices/requirements.tex
@@ -95,12 +95,12 @@ on the topic of \textbf{backup system management}, \ldots{}
 	\item \relevantreq{I want be able to see how much capacity a user is using.}
 	\item \relevantreq{I want to limit the capacity per user.}
 	\item I want to define default profiles on how long to keep backups for new users.
-	\item \relevantreq{I want to extend the storage capacity by plugging in a new Disk and starting/connecting a new node.}
+	\item \relevantreq{I want to extend the storage capacity by plugging in a new disk and starting/connecting a new node.}
 	\item \relevantreq{I want to add new backup sites (and therefore nodes) to the system.}
 	\item \relevantreq{I want to scale the system up to 100 Nodes and down to 2.}
 	\item \relevantreq{I want to put large disks (e.g. 2TB) into a node so that I do not have to maintain an unjustifiably high number of nodes.}
 	\item \relevantreq{I want the system to operate properly if the management node is down (no single point of failure). The addition of new nodes may not be possible without management.}
-	\item \relevantreq{I want to perform updates including reboots without impacting the performance of the System (e.g. if data must be copied around).}
+	\item \relevantreq{I want to perform updates including reboots without impacting the performance of the system (e.g. if data must be copied around).}
 	\item \relevantreq{I want to update the management server (including restart) without impacting the system (except for the configuration/monitoring part).}
 	\enumcountsave
 \end{enumerate}
@@ -111,8 +111,8 @@ on the topic of \textbf{backup monitoring}, \ldots{}
 
 \begin{enumerate}
 	\enumcountrestore
-	\item \relevantreq{I want to receive notifications quickly (i.e. within an hour) when a Disk or Node in the System fails.}
-	\item \relevantreq{I want to receive notifications within an hour if a Disk or Node might fail soon (e.g. SMART-Results indicate that a Disk will fail).}
+	\item \relevantreq{I want to receive notifications quickly (i.e. within an hour) when a disk or node in the System fails.}
+	\item \relevantreq{I want to receive notifications within an hour if a disk or node might fail soon (e.g. SMART-results indicate that a disk will fail).}
 	\item \relevantreq{I want to be informed if a certain replication-degree cannot be met.}
 \end{enumerate}
 
