Add first scenario appendix draft

--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -185,6 +185,7 @@ We would like to thank our advisor, Prof.Dr. Farhad Mehta, for his continuous su
 \appendix % Cue to tell LaTeX that the following "chapters" are Appendices
 
 %\include{appendices/appendix_a}
+\include{appendices/scenarios}
 
 
 %----------------------------------------------------------------------------------------
