Add language evaluation table

--- a/final-submission/references.bib
+++ b/final-submission/references.bib
@@ -1,7 +1,150 @@
-@ONLINE{problemstatement,
-	author = {Fabian Hauser and Raphael Zimmermann},
-	title = {{Task Description} ''redbackup: a redundant distributed backup system prototype''},
+@ONLINE{golang-org,
+	author = {{The Go Authors}},
+	title = {{The Go Programming Language}},
 	year = 2017,
-	urldate = {2017-09-10},
-	howpublished={\url{https://www.redbackup.org/problem-statement.pdf}},
+	urldate = {2017-10-10},
+	howpublished={\url{https://golang.org/}},
+}
+
+@ONLINE{go-github-minimum-requirements,
+	author = {{The Go Authors}},
+	title = {{Minimum Requirements} for the Go Programming Language },
+	year = 2017,
+	urldate = {2017-10-10},
+	howpublished={\url{https://github.com/golang/go/wiki/MinimumRequirements}},
+}
+
+@ONLINE{go-github-release-cycle,
+	author = {{The Go Authors}},
+	title = {{Go Release Cycle} for the Go Programming Language },
+	year = 2017,
+	urldate = {2017-10-10},
+	howpublished={\url{https://github.com/golang/go/wiki/Go-Release-Cycle}},
+}
+
+
+@ONLINE{golang-org-faq,
+	author = {{The Go Authors}},
+	title = {{Why is my trivial program such a large binary?} - Frequently Asked Questions},
+	year = 2017,
+	urldate = {2017-10-10},
+	howpublished={\url{https://golang.org/doc/faq}},
+}
+
+@ONLINE{golang-org-cgo,
+	author = {{The Go Authors}},
+	title = {{Command cgo}},
+	year = 2017,
+	urldate = {2017-10-10},
+	howpublished={\url{https://golang.org/cmd/cgo/}},
+}
+
+@ONLINE{erlang-org-nif,
+	author = {{The Erlang Authors}},
+	title = {{Erlang Programming Language}},
+	year = 2017,
+	urldate = {2017-10-10},
+	howpublished={\url{http://www.erlang.org/}},
+}
+
+@ONLINE{erlang-org,
+	author = {{The Erlang Authors}},
+	title = {{Native Implemented Functions} - Erlang User's Guide},
+	year = 2017,
+	urldate = {2017-10-10},
+	howpublished={\url{http://erlang.org/doc/tutorial/nif.html}},
+}
+
+
+@ONLINE{stackoverflow-erlang-guis,
+	author = {Degenhardt, Brian},
+	title = {{What libraries can I use to build a GUI with Erlang?}},
+	year = 2008,
+	urldate = {2017-10-10},
+	howpublished={\url{https://stackoverflow.com/questions/97508/what-libraries-can-i-use-to-build-a-gui-with-erlang/}},
+}
+
+
+@ONLINE{erlang-faq-implementations,
+	author = {{The Erlang Authors}},
+	title = {{Implementation and Ports of Erlang} - Frequently Asked Questions about Erlang},
+	year = 2017,
+	urldate = {2017-10-10},
+	howpublished={\url{http://erlang.org/faq/implementations.html}},
+}
+@ONLINE{erlang-packaging,
+	author = {Morrow, Jared},
+	title = {{Packaging Erlang Applications}},
+	year = 2013,
+	urldate = {2017-10-10},
+	howpublished={\url{https://speakerdeck.com/jaredmorrow/packaging-erlang-applications}},
+}
+
+@ONLINE{rust-book-concurrency,
+	author = {{The Rust Project Developers}},
+	title = {{Fearless Concurrency} - The Rust Programming Language, Second Edition (draft)},
+	year = 2017,
+	urldate = {2017-10-10},
+	howpublished={\url{https://doc.rust-lang.org/book/second-edition/ch16-00-concurrency.html}},
+}
+
+@ONLINE{rust-book-concurrency,
+	author = {{The Rust Project Developers}},
+	title = {{Foreign Function Interface} - The Rust Programming Language, Second Edition (draft)},
+	year = 2017,
+	urldate = {2017-10-10},
+	howpublished={\url{https://doc.rust-lang.org/book/first-edition/ffi.html}},
+}
+
+
+@inbook{hebert_learn_you_some_erlang,
+	author = {Hebert, Fred},
+	title = {Learn You Some Erlang for Great Good!: A Beginner's Guide},
+	chapter = {{Introduction}},
+	year = {2013},
+	isbn = {1593274351, 9781593274351},
+	publisher = {No Starch Press},
+	address = {San Francisco, CA, USA},
+}
+
+@inbook{doxsey_introduction_2012,
+	author = {Doxsey, Caleb},
+	title = {An introduction to programming in Go},
+	chapter = {{Concurrency}},
+	year = {2012},
+	isbn = {978-1478355823},
+	publisher = {CreateSpace Independent Publishing Platform},
+	url = {http://www.golang-book.com/},
+},
+
+@ONLINE{rustlang-org,
+	author = {{The Rust Authors}},
+	title = {{The Rust Programming Language}},
+	year = 2017,
+	urldate = {2017-10-10},
+	howpublished={\url{https://www.rust-lang.org/en-US/}},
+}
+
+@ONLINE{rust-blog-introducing-mir,
+	author = {Matsakis, Niko},
+	title = {{Introducing MIR} - The Rust Programming Language Blog},
+	year = 2016,
+	urldate = {2017-10-10},
+	howpublished={\url{https://blog.rust-lang.org/2016/04/19/MIR.html}},
+}
+
+@ONLINE{rust-blog-stability,
+	author = {Matsakis, Niko and Turon, Aaron},
+	title = {{Stability as a Deliverable} - The Rust Programming Language Blog},
+	year = 2014,
+	urldate = {2017-10-10},
+	howpublished={\url{https://blog.rust-lang.org/2014/10/30/Stability.html}},
+}
+
+@ONLINE{tokio-rs,
+	author = {{Tokio Project}},
+	title = {{Tokio} - A platform for writing fast networking code with Rust.},
+	year = 2017,
+	urldate = {2017-10-10},
+	howpublished={\url{https://tokio.rs/}},
 }
