--- a/latex_template.tex
+++ b/latex_template.tex
@@ -19,9 +19,13 @@ headsepline, % Uncomment to get a line under the header
 consistentlayout, % Uncomment to change the layout of the declaration, abstract and acknowledgements pages to match the default layout
 ]{../latex_template} % The class file specifying the document structure
 
-\usepackage[utf8]{inputenc} % Required for inputting international characters
+%\usepackage[utf8]{inputenc} % Required for inputting international characters
 \usepackage[T1]{fontenc} % Output font encoding for international characters
 \usepackage{mathpazo} % Use the Palatino font by default
+\usepackage{tabu}
+\usepackage{diagbox}
+
+\usepackage{url}
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
 
 %----------------------------------------------------------------------------------------
