--- a/final-submission/appendices/requirements.tex
+++ b/final-submission/appendices/requirements.tex
@@ -5,7 +5,7 @@
 \newcommand{\enumcountrestore}{\setcounter{enumi}{\value{listcounter}}}
 
 \section{Requirements}
-
+\label{requirements}
 The System knows two roles: \emph{Users} and \emph{Administrators}.
 
 A typical \emph{User} does not want to interact with the system at any time.
