--- a/latex_template.tex
+++ b/latex_template.tex
@@ -24,6 +24,7 @@ consistentlayout, % Uncomment to change the layout of the declaration, abstract 
 \usepackage{mathpazo} % Use the Palatino font by default
 \usepackage{tabu}
 \usepackage{diagbox}
+\usepackage{rotating}
 
 \usepackage{url}
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
