Add testing section

--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -187,6 +187,7 @@ We would like to thank our advisor, Prof.Dr. Farhad Mehta, for his continuous su
 \addcontentsline{toc}{chapter}{Appendices}
 \include{appendices/requirements}
 \include{appendices/language-evaluation}
+\include{appendices/testing}
 
 
 %----------------------------------------------------------------------------------------
