--- a/final-submission/references.bib
+++ b/final-submission/references.bib
@@ -1,3 +1,11 @@
+@ONLINE{project-plan,
+	author = {Fabian Hauser and Raphael Zimmermann},
+	title = {{Redbackup: Project Plan}},
+	year = 2017,
+	urldate = {2017-10-10},
+	howpublished={\url{https://redbackup.org/project-plan.pdf}},
+}
+
 @ONLINE{golang-org,
 	author = {{The Go Authors}},
 	title = {{The Go Programming Language}},
@@ -147,4 +155,12 @@
 	year = 2017,
 	urldate = {2017-10-10},
 	howpublished={\url{https://tokio.rs/}},
+}
+
+@ONLINE{docker-compose,
+	author = {{Docker Inc.}},
+	title = {{Docker Compose} - Define and run multi-container applications with Docker},
+	year = 2017,
+	urldate = {2017-10-10},
+	howpublished={\url{https://docs.docker.com/compose/}},
 }
